image-processing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2020-01-06T21:29:49Z"
  generation: 10
  labels:
    app: image-processing
  name: image-processing
  namespace: default
  resourceVersion: "279219"
  selfLink: /apis/apps/v1/namespaces/default/deployments/image-processing
  uid: ab106db8-30cb-11ea-b050-42010aa40227
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: image-processing
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: image-processing
    spec:
      containers:
      - image: mareeee/processing-microservice:latest
        imagePullPolicy: Always
        name: processing-microservice
        resources:
          requests:
            cpu: 50m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2020-01-06T21:29:49Z"
    lastUpdateTime: "2020-01-07T17:32:48Z"
    message: ReplicaSet "image-processing-7976f656bc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2020-01-07T17:44:25Z"
    lastUpdateTime: "2020-01-07T17:44:25Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 10
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
