ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /upload(/|$)(.*)
            backend:
              serviceName: image-upload-service
              servicePort: 22340
          - path: /process(/|$)(.*)
            backend:
              serviceName: processing-service
              servicePort: 22341
          - path: /catalogue(/|$)(.*)
            backend:
              serviceName: get-image-service
              servicePort: 22341
